--- a/src/Form.css
+++ b/src/Form.css
@@ -9,5 +9,6 @@
 
   .Form button {
     text-transform: uppercase;
-    background-color: #76c7ad;
+    background-color: #223843;
+    color: #EFF1F3;
   }
