Handle remove item

--- a/src/PackingList.css
+++ b/src/PackingList.css
@@ -39,7 +39,7 @@
   input[type="checkbox"] {
     height: 2rem;
     width: 2rem;
-    accent-color: #e5771f;
+    accent-color: #223843;
   }
   
   .PackingList li button {
