--- a/src/PackingList.css
+++ b/src/PackingList.css
@@ -16,6 +16,8 @@
     font-size: 1.4rem;
     font-weight: 700;
     margin: 0 0.8rem;
+    background-color: #223843;
+    color: #EFF1F3;
   }
   
   .PackingList ul {
